src/k8s/apps/sparky/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparky-server
spec:
  selector:
    app.kubernetes.io/name: sparky
    app.kubernetes.io/component: server
  ports:
    - name: http
      port: 3010
      targetPort: http
