src/k8s/apps/sparky/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sparky-frontend
spec:
  selector:
    app.kubernetes.io/name: sparky
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      port: 80
      targetPort: http
