src/k8s/apps/sparky/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sparky
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - sparky.levizitting.com
      secretName: sparky-levizitting-com-tls
  rules:
    - host: sparky.levizitting.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sparky-frontend
                port:
                  name: http
